Modifica file macro.sty

--- a/macro.sty
+++ b/macro.sty
@@ -6,10 +6,10 @@
 \RequirePackage[english,italian]{babel}
 \RequirePackage{fourier}
 \RequirePackage{microtype}
-\RequirePackage[margin=4cm]{geometry} % ................. MODIFICA
+\RequirePackage[margin=4cm]{geometry} 
 \RequirePackage{multicol}
-\RequirePackage{indentfirst} %........................... AGGIUNTA
-\RequirePackage{pifont} % .......( pifont per bbding )... MODIFICA
+\RequirePackage{indentfirst}
+\RequirePackage{pifont}
 
 \RequirePackage{xcolor}
 \RequirePackage{listings}
@@ -19,9 +19,9 @@
         frame=single}
 \RequirePackage{hyperref}
 
-\providecommand{\emacs}{\textsf{GNU Emacs}} % ........... MODIFICA
-\providecommand{\auctex}{\textsf{AUC\TeX{}}} % .......... MODIFICA
-\providecommand{\mano}{\ding{42}} % \ding42 per HandRight MODIFICA
+\providecommand{\emacs}{\textsf{GNU Emacs}}
+\providecommand{\auctex}{\textsf{AUC\TeX{}}}
+\providecommand{\mano}{\ding{42}}
 
 %%% Local Variables:
 %%% mode: latex
