Codifica passata da latin1 a utf8

--- a/macro.sty
+++ b/macro.sty
@@ -2,7 +2,7 @@
 
 \RequirePackage[T1]{fontenc}
 \RequirePackage{textcomp}
-\RequirePackage[latin1]{inputenc}
+\RequirePackage[utf8]{inputenc}
 \RequirePackage[english,italian]{babel}
 \RequirePackage{fourier}
 \RequirePackage{microtype}
@@ -25,5 +25,6 @@
 
 %%% Local Variables:
 %%% mode: latex
+%%% coding: utf-8
 %%% TeX-master: "main"
 %%% End:
