--- a/main.tex
+++ b/main.tex
@@ -48,22 +48,22 @@ In questo paragrafo verranno date le informazioni necessarie per installare
 Per dirla tutta, in un sistema operativo MicroSoft Windows (Xp, Seven)
 non esiste una vera e propria installazione, pertanto per poter
 \emph{installare} ed usare \emacs{} in questo ambiente,
-Ë sufficiente procurarsi l'archivio contenente gli eseguibili del programma.
+√® sufficiente procurarsi l'archivio contenente gli eseguibili del programma.
 
-Per questa guida si Ë fatto riferimento al mirror ufficiale
+Per questa guida si √® fatto riferimento al mirror ufficiale
 (\href{http://ftp.gnu.org/pub/gnu/emacs/windows/}{\mano{} \emacs}),
 da cui bisogna scaricare l'archivio compresso
 \href{http://ftp.gnu.org/pub/gnu/emacs/windows/emacs-23.1-barebin-i386.zip}
 {\textsf{emacs-23.1-barebin-i386.zip}}.
 
 Una volta de-compresso, i file ottenuti devono essere copiati in una
-posizione di comodo. Una buona soluzione, per esempio, Ë data da:
+posizione di comodo. Una buona soluzione, per esempio, √® data da:
 
 \begin{verbatim}
 C:/Programmi/Emacs/
 \end{verbatim}
 
-La cartella appena creata sar‡ cosÏ formata:
+La cartella appena creata sar√† cos√¨ formata:
 \begin{center}\ttfamily
  \begin{tabular}{lrl}
   <DIR>&        & bin       \\
@@ -80,8 +80,8 @@ La cartella appena creata sar‡ cosÏ formata:
  \end{tabular}
 \end{center}
 
-Per creare un collegamento nel men˘ \textsf{Start}, bisogna
-eseguire (doppio click) il file \emph{addpm.exe}. Attenzione perÚ: con questa
+Per creare un collegamento nel men√π \textsf{Start}, bisogna
+eseguire (doppio click) il file \emph{addpm.exe}. Attenzione per√≤: con questa
 procedura non viene aggiunto il percorso degli eseguibili alla  
 variabile d'ambiente \textsf{PATH}. Quindi per poter lanciare 
 \emacs{} da qualunque posizione, qualora si faccia un forte uso del prompt dei
@@ -89,9 +89,9 @@ comandi di Windows, questa operazione va fatta a mano.
 
 \subsection*{\emacs{} per GNU/Linux}
 \label{sec:installlinux}
-\emacs{} fa parte del progetto GNU quindi Ë presente in tutti i sistemi
-operativi della famiglia GNU/Linux. Se non Ë gi‡ installato, il metodo pi˘
-semplice per ottenere \emacs{} in un sistema GNU/Linux Ë far riferimento al
+\emacs{} fa parte del progetto GNU quindi √® presente in tutti i sistemi
+operativi della famiglia GNU/Linux. Se non √® gi√† installato, il metodo pi√π
+semplice per ottenere \emacs{} in un sistema GNU/Linux √® far riferimento al
 gestore pacchetti della propria distribuzione. Si possono naturalmente
 utilizzare i gestori di pacchetti a interfaccia grafica, riportiamo qui inoltre
 i comandi da terminale che possono essere eseguiti per installare \emacs{} in
@@ -108,11 +108,11 @@ OpenSUSE: %chiedere a qualcuno
 $ sudo ..... 
 \end{verbatim}
 
-Il metodo pi˘ difficile, per i non avvezzi all'uso del terminale, consiste nel
-compilare \emacs{} a partire dal codice sorgente, tuttavia non Ë intenzione di
-questa guida spiegare come fare ciÚ.
+Il metodo pi√π difficile, per i non avvezzi all'uso del terminale, consiste nel
+compilare \emacs{} a partire dal codice sorgente, tuttavia non √® intenzione di
+questa guida spiegare come fare ci√≤.
 
-Dopo averlo installato, \emacs{} potr‡ essere avviato facendo clic sul suo
+Dopo averlo installato, \emacs{} potr√† essere avviato facendo clic sul suo
 lanciatore oppure eseguendo da terminale il comando
 \begin{verbatim}
 $ emacs
@@ -135,26 +135,26 @@ $ emacs file1.tex file2.tex
 
 \section{Installare \auctex}
 \label{sec:installauc}
-%%%Dire cosa Ë AUCTEX?
+%%%Dire cosa √® AUCTEX?
 \subsection*{\auctex{} per Windows}
 \label{sec:auctexwin}
 
 Le operazioni per rendere funzionante \auctex{} per \emacs{} in ambiente
-Windows sono ancora pi˘ semplici.
+Windows sono ancora pi√π semplici.
 
 Dal sito di riferimento di \auctex{} per Windows 
 (\href{%
 http://www.gnu.org/software/auctex/download-for-windows.html}%
 {\mano{} \auctex}), bisogna scaricare l'archivio \href{%
 http://ftp.gnu.org/pub/gnu/auctex/auctex-11.86-e23.2-msw.zip}%
-{\textsf{auctex-11.86-e23.2-msw.zip}}, che altro non Ë che un insieme di
+{\textsf{auctex-11.86-e23.2-msw.zip}}, che altro non √® che un insieme di
 pacchetti precompilati.
 
-Una volta de-compresso, Ë sufficiente copiare i file di tale archivio
-nel punto dove abbiamo messo \emacs{}, cioË
+Una volta de-compresso, √® sufficiente copiare i file di tale archivio
+nel punto dove abbiamo messo \emacs{}, cio√®
 \texttt{C:/Programmi/Emacs/}.
 
- Si noter‡ che esiste gi‡ una cartella
+ Si noter√† che esiste gi√† una cartella
 \textsf{site-lisp}: i file contenuti in  quella di \auctex{} vanno copiati
 nella omonima di \emacs. In quest'ultima, quindi, dovrebbero
 esserci cinque file in totale:
@@ -169,13 +169,13 @@ esserci cinque file in totale:
  \end{tabular}
 \end{center}
 
-Aprendo successivamente \emacs{} si noter‡ qualche cambiamento
-non appena si passa alla modalit‡ \textsf{tex-mode} o a quella \textsf{latex-mode}.
+Aprendo successivamente \emacs{} si noter√† qualche cambiamento
+non appena si passa alla modalit√† \textsf{tex-mode} o a quella \textsf{latex-mode}.
 
 \subsection*{\auctex{} per GNU/Linux}
 \label{sec:auctexlinux}
 
-Anche il pacchetto \auctex{} Ë presente nei sistemi GNU/Linux. Come gi‡ detto
+Anche il pacchetto \auctex{} √® presente nei sistemi GNU/Linux. Come gi√† detto
 per \emacs, per installare \auctex{} si consiglia di utilizzare il gestore
 pacchetti della propria distribuzione. Ecco i comandi da usare nelle principali
 distribuzioni: Debian:
@@ -211,17 +211,17 @@ $ sudo .... emacs-auctex
 \section{Correttore ortografico}
 \label{sec:corr}
 Per abilitare \emacs{} a lavorare con la lingua italiana, bisogna
-installare il correttore ortografico. Le procedure, poichÈ differenti,
+installare il correttore ortografico. Le procedure, poich√© differenti,
 vengono di seguito esposte per tutti e tre i sistemi operativi. 
-L'uso Ë ovviamente invariante. 
+L'uso √® ovviamente invariante. 
 
 Per poter fare una \emph{revisione} del proprio file, bisogna digitare:
 \begin{verbatim}
 M-x ispell
 \end{verbatim}
-in questo modo il dizionario proporr‡ di sequenza, la correzione
+in questo modo il dizionario proporr√† di sequenza, la correzione
 dei termini che trova errati; un secondo modo, per scrivere
-correttamente, Ë attivare la modalit‡ \emph{flyspell} (correzione al
+correttamente, √® attivare la modalit√† \emph{flyspell} (correzione al
 volo, interattiva). Se la si vuole
 attivare solo sul documento corrente basta andare in:
 \begin{verbatim}
@@ -233,16 +233,16 @@ basta aggiungere la riga:
 (add-hook 'LaTeX-mode-hook 'flyspell-mode)
 \end{verbatim}
 al proprio file \emph{.emacs}. Quando viene rilevata una parola
-potenzialmente sbagliata, questa verr‡ visualizzata in rosso. La
-correzione puÚ essere fatta a mano o con la combinazione \verb!M-$!,
-la quale proporr‡ possibili soluzioni.
+potenzialmente sbagliata, questa verr√† visualizzata in rosso. La
+correzione pu√≤ essere fatta a mano o con la combinazione \verb!M-$!,
+la quale proporr√† possibili soluzioni.
 
 \subsection*{Windows}
 \label{sec:aspellwin}
 Per installare il correttore ortografico in ambiente
-Windows, si puÚ usare il programma \textsf{GNU Aspell}
+Windows, si pu√≤ usare il programma \textsf{GNU Aspell}
 (\href{http://aspell.net/win32/}{\mano{} \textsf{GNU Aspell - Win32 version}}). L'ultima
-versione stabile per Windows, seppur datata Dicembre 2002, Ë la \textsf{0.50-3}.
+versione stabile per Windows, seppur datata Dicembre 2002, √® la \textsf{0.50-3}.
 
 I file che bisogna procurarsi sono quelli che vengono di seguito
 riportati; si badi bene ad installarli nell'ordine in cui vengono dati:
@@ -257,7 +257,7 @@ vero e proprio);
 \end{enumerate}
 
 Alla stessa pagina di questi file sono disponibili tanti altri
-dizionari precompilati, pi˘ o meno aggiornati, di altre lingue.
+dizionari precompilati, pi√π o meno aggiornati, di altre lingue.
 
 Resta qualche altra operazione da fare. Come prima cosa si deve copiare il
 percorso della cartella dove sono contenuti gli eseguibili di Aspell nella
@@ -278,10 +278,10 @@ precedenti.
 \subsection*{GNU/Linux}
 \label{sec:aspelllinux}
 
-Il correttore ortografico GNU Aspell puÚ essere installato facilmente su
+Il correttore ortografico GNU Aspell pu√≤ essere installato facilmente su
 GNU/Linux utilizzando, come al solito, il gestore pacchetti della propria
 distribuzione. Il dizionario italiano di GNU Aspell si chiama \verb|aspell-it|
-quindi da terminale puÚ essere installato in Debian con il comando
+quindi da terminale pu√≤ essere installato in Debian con il comando
 \begin{verbatim}
 $ sudo apt-get install aspell-it
 \end{verbatim}
@@ -289,7 +289,7 @@ in Fedora con
 \begin{verbatim}
 $ sudo yum install aspell-it
 \end{verbatim}
-mentre in OpenSUSE si puÚ eseguire il comando: % chiedere qual Ë il comando
+mentre in OpenSUSE si pu√≤ eseguire il comando: % chiedere qual √® il comando
 \begin{verbatim}
 $ sudo ..... aspell-it
 \end{verbatim}
@@ -310,11 +310,11 @@ $ sudo ..... aspell-it
 \section{Reference Card}
 \label{sec:refcard}
 
-Oltre alla vasta documentazione che si puÚ reperire in rete, di 
-particolare utilit‡ sono le \emph{Reference Card}, disponibili sia per
+Oltre alla vasta documentazione che si pu√≤ reperire in rete, di 
+particolare utilit√† sono le \emph{Reference Card}, disponibili sia per
 \emacs{}, sia per \auctex{}.
 
-Si tratta, come Ë facile immaginare, di una sorta di riassunto in
+Si tratta, come √® facile immaginare, di una sorta di riassunto in
 forma tabulare dei principali comandi per poter usare questi
 programmi,  eventualmente  da stampare, e tenere a portata di mano
 sulla  propria scrivania.
@@ -335,5 +335,6 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 
 %%% Local Variables: 
 %%% mode: latex
+%%% coding: utf-8
 %%% TeX-master: t
 %%% End: 
