Corretto titolo sezione

--- a/main.tex
+++ b/main.tex
@@ -197,7 +197,7 @@ $ sudo .... emacs-auctex
 
 \lipsum[1]
 
-\section{Personalizzare \emacs e \auctex}
+\section{Personalizzare \emacs{} e \auctex}
 \label{sec:personal}
 
 \lipsum[1]
