aggiunti comandi per installare pacchetti su openSUSE
Grazie a capitalaslash.

--- a/main.tex
+++ b/main.tex
@@ -103,9 +103,9 @@ Fedora:
 \begin{verbatim}
 $ sudo yum install emacs
 \end{verbatim}
-OpenSUSE: %chiedere a qualcuno
+openSUSE:
 \begin{verbatim}
-$ sudo ..... 
+$ sudo zypper install emacs
 \end{verbatim}
 
 Il metodo più difficile, per i non avvezzi all'uso del terminale, consiste nel
@@ -177,8 +177,8 @@ non appena si passa alla modalità \textsf{tex-mode} o a quella \textsf{latex-mo
 
 Anche il pacchetto \auctex{} è presente nei sistemi GNU/Linux. Come già detto
 per \emacs, per installare \auctex{} si consiglia di utilizzare il gestore
-pacchetti della propria distribuzione. Ecco i comandi da usare nelle principali
-distribuzioni: Debian:
+pacchetti della propria distribuzione. Ecco i comandi da usare per installare da
+terminale il pacchetto nelle principali distribuzioni: Debian e Ubuntu:
 \begin{verbatim}
 $ sudo apt-get install auctex
 \end{verbatim}
@@ -186,9 +186,9 @@ Fedora:
 \begin{verbatim}
 $ sudo yum install emacs-auctex
 \end{verbatim}
-OpenSUSE: % chiedere a qualcuno il nome del comando
+openSUSE: 
 \begin{verbatim}
-$ sudo .... emacs-auctex
+$ sudo zypper install emacs-auctex
 \end{verbatim}
 
 
@@ -289,9 +289,9 @@ in Fedora con
 \begin{verbatim}
 $ sudo yum install aspell-it
 \end{verbatim}
-mentre in OpenSUSE si può eseguire il comando: % chiedere qual è il comando
+mentre in openSUSE si può eseguire il comando:
 \begin{verbatim}
-$ sudo ..... aspell-it
+$ sudo zypper install aspell-it
 \end{verbatim}
 
 \subsection*{Mac OS}
