Provato altro titolo temporaneo

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass[10pt,a4paper]{article}
-\title{L'arte di scrivere in \LaTeX{}\\
-  con\\
-  GNU Emacs \& AUC\TeX{}}
-
+% \title{L'arte di scrivere in \LaTeX{}\\
+%   con\\
+%   GNU Emacs \& AUC\TeX{}}
+\title{Introduzione a GNU Emacs \& AUCTeX}
 % \title{Una introduzione a GNU Emacs \& AUC\TeX{}}
 % \title{}
 
@@ -204,7 +204,6 @@ $ sudo .... emacs-auctex
 
 \section{Ref\TeX{}}
 \label{sec:reftex}
-
 
 \lipsum[1]
 
