--- a/main.tex
+++ b/main.tex
@@ -1,27 +1,19 @@
 \documentclass[10pt,a4paper]{article}
-% \title{L'arte di scrivere in \LaTeX{}\\
-%   con\\
-%   GNU Emacs \& AUC\TeX{}}
+
 \title{Introduzione a GNU Emacs \& AUCTeX}
-% \title{Una introduzione a GNU Emacs \& AUC\TeX{}}
-% \title{}
-
-% \author{Orlando Iovino  \thanks{Curatore di \emacs{} \& \auctex{} per Windows} 
-% \and Pinco Pallino   \thanks{Curatore di \emacs{} \& \auctex{} per Linux}
-% \and Tizio Sempronio \thanks{Curatore di \emacs{} \& \auctex{} per Mac OS}}
-
 \author{Orlando Iovino\\(Windows)
   \and Pinco Pallino\\(GNU/Linux)
   \and Tizio Sempronio\\(Mac OS)}
+\date{\today}
 
 \usepackage{macro}
 
-\usepackage{lipsum} %%%%%%%%%%%%%%%% TEMP
+\usepackage{lipsum}
 
 \begin{document}
 \maketitle
 \begin{abstract}\sffamily
- % \lipsum[1] 
+ \textcolor{red!50}{\lipsum[1]} 
 \end{abstract}
 
 \begin{multicols}{2}
@@ -131,7 +123,7 @@ $ emacs file1.tex file2.tex
 \subsection*{\emacs{} per Mac OS}
 \label{sec:installmac}
 
-\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 \section{Installare \auctex}
 \label{sec:installauc}
@@ -195,17 +187,17 @@ $ sudo .... emacs-auctex
 \subsection*{\auctex{} per Mac OS}
 \label{sec:auctexmac}
 
-\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 \section{Personalizzare \emacs{} e \auctex}
 \label{sec:personal}
 
-\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 \section{Ref\TeX{}}
 \label{sec:reftex}
 
-\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 \section{Correttore ortografico}
 \label{sec:corr}
@@ -296,12 +288,12 @@ $ sudo ..... aspell-it
 \subsection*{Mac OS}
 \label{sec:aspellmac}
 
-\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 \section{Autocomplete mode}
 \label{sec:auto}
 
-\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 % Per GNU/Linux vedere
 % http://elubuntu.blogspot.com/2010/04/autocompletamento-in-emacs-2.html
@@ -325,7 +317,7 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 \section{Conclusioni}
 \label{sec:fine}
 
-\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 
 %% METTERE LA BIBLIOGRAFIA
