Modifica at Reference Card

--- a/main.tex
+++ b/main.tex
@@ -301,14 +301,17 @@ $ sudo ..... aspell-it
 \section{Reference Card}
 \label{sec:refcard}
 
-Oltre alla vasta documentazione che si può reperire in rete, di 
-particolare utilità sono le \emph{Reference Card}, disponibili sia per
-\emacs{}, sia per \auctex{}.
+Oltre alla vasta documentazione che si può reperire in rete ed ai
+manuali ufficiali, di particolare utilità sono le \emph{Reference
+  Card}, disponibili sia per \emacs{}, sia per \auctex{}.
 
-Si tratta, come è facile immaginare, di una sorta di riassunto in
-forma tabulare dei principali comandi per poter usare questi
-programmi,  eventualmente  da stampare, e tenere a portata di mano
-sulla  propria scrivania.
+Si tratta di un elenco delle principali funzionalità e dei comandi 
+a queste associate per poter, all'occorrenza, ricordare e trovare
+velocemente quello che serve.
+
+Il tutto è riportato in maniera ordinata e concisa in una sorta di
+forma tabulare, eventualmente  da stampare, e tenere a portata di mano
+sulla propria scrivania.
 
 Le reference card sono disponibili sia in rete, sia sul proprio
 computer una volta installati \emacs{} ed \auctex. Sul proprio
