--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt,a4paper]{article}
 
-\title{Introduzione a GNU Emacs \& AUCTeX}
+\title{Una introduzione a GNU Emacs \& AUC\TeX{}}
 \author{Orlando Iovino\\(Windows)
   \and Pinco Pallino\\(GNU/Linux)
   \and Tizio Sempronio\\(Mac OS)}
@@ -20,7 +20,7 @@
   \tableofcontents
 \end{multicols}
 
-\section{Introduzione}
+\section{Introduzione a GNU Emacs \& AUC\TeX}
 \label{sec:intro}
 
 %\lipsum[1]
@@ -127,7 +127,7 @@ $ emacs file1.tex file2.tex
 
 \section{Installare \auctex}
 \label{sec:installauc}
-%%%Dire cosa è AUCTEX?
+
 \subsection*{\auctex{} per Windows}
 \label{sec:auctexwin}
 
@@ -210,7 +210,7 @@ Per poter fare una \emph{revisione} del proprio file, bisogna digitare:
 \begin{verbatim}
 M-x ispell
 \end{verbatim}
-in questo modo il dizionario proporrà di sequenza, la correzione
+in questo modo il dizionario proporrà in sequenza, la correzione
 dei termini che trova errati; un secondo modo, per scrivere
 correttamente, è attivare la modalità \emph{flyspell} (correzione al
 volo, interattiva). Se la si vuole
@@ -262,9 +262,6 @@ righe di codice:
 \end{verbatim}
 dove la seconda riga di codice serve a \emph{fixare} dei problemi con le versioni
 precedenti.
-
-% (setq flyspell-use-meta-tab nil)
-%% DIRE A COSA SERVONO LE RIGHE
 
 \subsection*{GNU/Linux}
 \label{sec:aspelllinux}
