--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,7 @@
 \section{Introduzione a GNU Emacs \& AUC\TeX}
 \label{sec:intro}
 
-%\lipsum[1]
+\textcolor{red!50}{\lipsum[1]}
 
 \section{Installare \emacs}
 \label{sec:install}
