--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,17 @@
 \begin{document}
 \maketitle
 \begin{abstract}\sffamily
- \textcolor{red!50}{\lipsum[1]} 
+Questo articolo nasce con l'intenzione di dare una breve panoramica
+all'uso di \emacs{} per \LaTeX{}, con l'ausilio di \auctex, per i
+principali sistemi operativi.
+
+Dopo una introduzione ai programmi, verranno esposte le modalità per
+poter installare e configurare \emacs{} e \auctex{} per poter scrivere
+documenti \LaTeX{}.
+
+L'articolo non ha la pretesa di essere un \emph{manuale}, bensì un
+piccolo tutorial per far avvicinare gli utenti di \LaTeX{} a questo
+programma, non così troppo complicato come spesso viene indicato.
 \end{abstract}
 
 \begin{multicols}{2}
