Caricato fancyvrb e modificato ambiente verbatim in Verbatim

--- a/macro.sty
+++ b/macro.sty
@@ -12,6 +12,10 @@
 \RequirePackage{pifont}
 
 \RequirePackage{xcolor}
+
+\usepackage{fancyvrb}
+\fvset{xleftmargin=\the\parindent}
+
 \RequirePackage{listings}
 \lstset{language=Lisp,%
         basicstyle=\scriptsize\ttfamily,%
