Modificato file TODO

--- a/TODO
+++ b/TODO
@@ -1,7 +1,4 @@
-Scrivere Personalizzare Emacs e AUCTeX
-
-RefTeX
-
-Conclusioni
-
-Bibliografia
+* Stabilire titolo
+* Stabilire classe
+* Pianificare sezioni da aggiungere
+* Completare sezioni in rosso
