Ulteriore modifica al file TODO

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 * Stabilire titolo
-* Stabilire classe
+* Stabilire classe, layout, font
+* Stabilire licenza
 * Pianificare sezioni da aggiungere
 * Completare sezioni in rosso
