Aggiunti comandi per installare pacchetti su openSUSE (da Elrond)

--- a/main.tex
+++ b/main.tex
@@ -104,9 +104,9 @@ Fedora:
 \begin{Verbatim}
 $ sudo yum install emacs
 \end{Verbatim}
-OpenSUSE: %chiedere a qualcuno
+OpenSUSE:
 \begin{Verbatim}
-$ sudo ..... 
+$ sudo zypper install emacs
 \end{Verbatim} 
 
 Il metodo più difficile, per i non avvezzi all'uso del terminale, consiste nel
@@ -178,8 +178,8 @@ non appena si passa alla modalità \textsf{tex-mode} o a quella \textsf{latex-mo
 
 Anche il pacchetto \auctex{} è presente nei sistemi GNU/Linux. Come già detto
 per \emacs, per installare \auctex{} si consiglia di utilizzare il gestore
-pacchetti della propria distribuzione. Ecco i comandi da usare nelle principali
-distribuzioni: Debian:
+pacchetti della propria distribuzione. Ecco i comandi da usare per
+installare da terminale il pacchetto nelle principali distribuzioni: Debian e Ubuntu:
 \begin{Verbatim}
 $ sudo apt-get install auctex
 \end{Verbatim}
@@ -187,9 +187,9 @@ Fedora:
 \begin{Verbatim}
 $ sudo yum install emacs-auctex
 \end{Verbatim}
-OpenSUSE: % chiedere a qualcuno il nome del comando
+OpenSUSE:
 \begin{Verbatim}
-$ sudo .... emacs-auctex
+$ sudo zypper install emacs-auctex
 \end{Verbatim}
 
 
@@ -286,9 +286,9 @@ in Fedora con
 \begin{Verbatim}
 $ sudo yum install aspell-it
 \end{Verbatim}
-mentre in OpenSUSE si può eseguire il comando: % chiedere qual è il comando
+mentre in openSUSE si può eseguire il comando:
 \begin{Verbatim}
-$ sudo ..... aspell-it
+$ sudo zypper install aspell-it
 \end{Verbatim}
 
 \subsection*{Mac OS}
