Modifica file TODO: ricerca diretta-inversa

--- a/TODO
+++ b/TODO
@@ -2,4 +2,5 @@
 * Stabilire classe, layout, font
 * Stabilire licenza
 * Pianificare sezioni da aggiungere
+  - Ricerca diretta/inversa
 * Completare sezioni in rosso
