Inserita bibliografia nel documento principale

--- a/macro.sty
+++ b/macro.sty
@@ -16,6 +16,10 @@
 \usepackage{fancyvrb}
 \fvset{xleftmargin=\the\parindent}
 
+\RequirePackage[babel]{csquotes}
+\RequirePackage[citestyle=authoryear-comp,backref,hyperref]{biblatex}
+\bibliography{biblio}
+
 \RequirePackage{hyperref}
 
 \providecommand{\emacs}{\textsf{GNU Emacs}}
