--- a/main.tex
+++ b/main.tex
@@ -309,7 +309,7 @@ arrivare allo scopo.
 
 Le procedure  per abilitare tale funzione  in \emacs{} variano  per i tre
 sistemi  operativi, ma non  solo: variano  anche i  visualizzatori che
-permettono tale funzione. In [rif. Pantieri-Gordini] vengono citate le
+permettono tale funzione. In~\parencite{arte:latex} vengono citate le
 cosiddette \emph{coppie vincenti} adatte allo scopo.
 
 In ambiente  Windows, l'unico visualizzatore  capace di fare  questo è
@@ -435,8 +435,9 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 
 \textcolor{red!50}{\lipsum[1]}
 
-
-%% METTERE LA BIBLIOGRAFIA
+\cleardoublepage
+\addcontentsline{toc}{section}{\bibname}
+\printbibliography
 
 \end{document}
 
