--- a/main.tex
+++ b/main.tex
@@ -437,6 +437,7 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 
 \cleardoublepage
 \addcontentsline{toc}{section}{\bibname}
+\nocite{*}
 \printbibliography
 
 \end{document}
