Inserito paragrafo sulla Skeleton-Mode

--- a/macro.sty
+++ b/macro.sty
@@ -4,12 +4,13 @@
 \RequirePackage{textcomp}
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[english,italian]{babel}
-\RequirePackage{fourier}
+\RequirePackage{mathpazo}
 \RequirePackage{microtype}
 \RequirePackage[margin=4cm]{geometry} 
 \RequirePackage{multicol}
 \RequirePackage{indentfirst}
 \RequirePackage{pifont}
+\RequirePackage{guit}
 
 \RequirePackage{xcolor}
 
