--- a/biblio.bib
+++ b/biblio.bib
@@ -15,6 +15,12 @@
   url = {http://william.famille-blum.org/software/sumatra/index.html}
 }
 
+@MISC{emacsW32:wiki,
+  title = {EmacsW32},
+  year = {2011},
+  url = {http://www.emacswiki.org/emacs/EmacsW32}
+}
+
 @BOOKLET{arte:latex,
   title = {L'arte di scrivere con \LaTeX. Un'introduzione a \LaTeX},
   author = {Lorenzo Pantieri and Tommaso Gordini},
