--- a/main.tex
+++ b/main.tex
@@ -313,14 +313,19 @@ permettono tale funzione. In~\parencite{arte:latex} vengono citate le
 cosiddette \emph{coppie vincenti} adatte allo scopo.
 
 In ambiente  Windows, l'unico visualizzatore  capace di fare  questo è
-SumatraPDF, in  ambiente Linux si può  usare [\ldots],
-mentre in ambiente Mac OS si usa [\ldots].
+SumatraPDF, \textcolor{red}{in  ambiente Linux si può  usare [\ldots],
+mentre in ambiente Mac OS si usa [\ldots]}.
 
 \subsection*{Ricerca diretta-inversa su Windows}
 \label{sec:fiswin}
-\textcolor{red}{%
 Prima di entrare nel vivo dell'argomento, bisogna ovviare ad un bug che
-da tempo segue il programma \emacs{} su Windows [\ldots]}
+da tempo segue il programma \emacs{} su Windows, in particolare i
+sistemi Windows Vista e Seven (su Xp non dovrebbero esserci problemi),
+ovvero il problema che si ha quando si abilita il server 
+in emacs. % Specificare?
+
+La soluzione a tale problema è riportata in~\parencite{emacsW32:wiki}
+alla voce \href{http://www.emacswiki.org/emacs/EmacsW32#toc49}{\emph{Waiting for Emacs server to start" is ownership problem on ~/.emacs.d/server}}.
 
 Per i sistemi operativi Windows il solo visualizzatore capace di
 interagire con il file sorgente \textsf{.tex} creato con \emacs{} è
@@ -346,9 +351,9 @@ mediante il proprio file \emph{.emacs}.
 
 Per la ricerca inversa si deve aprire SumatraPDF, andare in
 \texttt{Impostazioni > Opzioni...} e digitare la riga
-\begin{verbatim}
+\begin{Verbatim}
 C:/Programmi/emacs/bin/emacsclientw.exe +%l "%f"
-\end{verbatim}
+\end{Verbatim}
 in \emph{Set inverse search command-line}.
 
 Per la ricerca diretta invece, si deve scaricare lo script
@@ -356,23 +361,22 @@ Per la ricerca diretta invece, si deve scaricare lo script
 e copiarlo in una cartella accessibile a \emacs{} (l'autore delle note
 l'ha posizionato in \texttt{C:/Programmi/emacs/bin/site-lisp}), per
 poi richiamarlo all'interno del proprio file \emph{.init} con la riga
-\begin{verbatim}
+\begin{Verbatim}
 (require 'sumatra-forward)
-\end{verbatim}
+\end{Verbatim}
 ed infine accertarsi di avere nella cartella degli eseguibili di
 \emacs, l'applicazione \textsf{ddeclient}, altrimenti scaricabile da
-[].
+(\href{http://ftp.gnu.org/old-gnu/emacs/windows/docs/ntemacs/contrib/ddeclient.zip}{\mano{}
+  \textsf{ddeclient}})
 
 Fatto questo resta da far capire a \emacs{} che si vuole la ricera
 diretta inversa, e per farlo si possono scrivere nel proprio \emph{.init}
 file, le seguenti righe:
-\begin{verbatim}
-(custom-set-variables
- '(TeX-source-correlate-method (quote synctex))
- '(TeX-source-correlate-mode t)
- '(TeX-source-correlate-start-server t)
-)
-\end{verbatim}
+\begin{Verbatim}
+(setq TeX-source-correlate-method (quote synctex))
+(setq TeX-source-correlate-mode t)
+(setq TeX-source-correlate-start-server t)
+\end{Verbatim}
 
 Per la ricerca inversa basta premere il tasto \textsf{F8} e nel
 visualizzatore verrà evidenziata la riga corrispondente; per le
@@ -385,13 +389,14 @@ non sia il proprio visualizzatore preferito. Infatti è possibile
 impostare \textsf{SumatraPDF} come visualizzatore predefinito di \emacs{} e non
 del sistema operativo (lasciando magari \textsf{Adobe Reader}), aggiungendo le
 seguenti righe a quelle sopra descritte:
-\begin{verbatim}
- '(TeX-view-program-list (quote (("SumatraPDF" "SumatraPDF %o"))))
- '(TeX-view-program-selection (quote (
+\begin{Verbatim}
+(setq TeX-view-program-list (quote (
+   ("SumatraPDF" "SumatraPDF %o"))))
+(setq TeX-view-program-selection (quote (
    (output-pdf "SumatraPDF") 
    (output-dvi "Yap") 
    (output-html "start"))))
-\end{verbatim}
+\end{Verbatim}
 
 \subsection*{Ricerca diretta-inversa su GNU/Linux}
 \label{sec:fislinux}
@@ -402,6 +407,125 @@ seguenti righe a quelle sopra descritte:
 \label{sec:fismac}
 
 \textcolor{red}{\lipsum[1]}
+
+\section{Skeleton Mode}
+\label{sec:skelmode}
+
+\subsection*{Introduzione}
+\label{skelintro}
+
+La \emph{skeleton mode} è uno speciale (ma potente) minilinguaggio,
+scritto in Elisp (un dialetto di Lisp) ed incluso di default in
+\emacs. Maggiori informazioni si possono ottenere digitando 
+\verb!C-h i d m Autotype! in \emacs.
+
+La \emph{skeleton mode} permette in maniera molto semplice di crearsi
+dei blocchi di codice (che magari si usano spesso) e di associare a
+questi una combinazione di tasti per richiamarli nel proprio
+documento.
+
+Ad un livello successivo, si può anche usare questo linguaggio per
+creare dei veri e propri \emph{templates}. Lo vedremo più avanti.
+
+Per semplicità, per mostrarne l'uso, vengono di seguito riportati
+degli esempi presi da una discussione sul forum del \guit. I codici si
+commentano quasi da soli:
+\begin{Verbatim}
+(define-skeleton TeX-dollar-sign-skeleton
+  "Make a pair of dollar signs and leave point inside" nil
+  "$"_"$"
+)
+
+(global-set-key (kbd "C-x e") 'Tex-dollar-sign-skeleton) 
+
+(define-skeleton TeX-square-skeleton
+  "Make a pair of square brackets and leave point inside" nil
+  "\\[" \n
+  _\n
+  "\\]"
+)
+
+(global-set-key (kbd "C-x s") 'TeX-square-skeleton
+\end{Verbatim}
+Nella prima riga si dichiara lo \emph{scheletro} con un nome, che
+verrà poi utilizzato per poterlo richiamare nel codice. Segue quindi
+una breve descrizione (facoltativa ma consigliata), e poi il codice
+vero e proprio. Infine con \verb!global-set-key! viene creata una
+combinazione di tasti personali per richiamare lo \emph{scheletro}.
+
+Gli esempi appena mostrati sono veramente semplici e forse se ne
+potrebbe fare a meno, ma servono per far capire con quanta semplicità si
+possono \emph{automatizzare} certe operazioni.
+
+\subsection*{Templates}
+\label{sec:skeltempl}
+
+Talvoltà può capitare di dover scrivere documenti che hanno una forma
+molto simile tra loro, o che, all'opposto, utilizziamo così raramente
+che averne un modello \emph{pronto uso} risulterebbe davvero comodo.
+
+Ecco che allora ci viene in mente di creare un file, un \emph{modello
+  di documento} già configurato, da richiamare nel nostro editor
+preferito.
+
+Per \emacs{} esistono diversi pacchetti che consentono di creare
+\emph{template}, ognuno dei quali richiede una installazione. Per fare
+questo possiamo invece avvalerci anche della \emph{skeleton mode}
+inclusa già in \emacs{}.
+
+Supponiamo di voler creare un \emph{modello di lettera} da usare
+velocemente all'occorrenza. Lo \emph{scheletro} di codice che verrà
+incluso nel documento va appunto nel file \emph{.emacs}. Un prototipo
+semplice potrebbe essere il seguente:
+
+\begin{Verbatim}
+(define-skeleton LaTeX-skeleton-letter
+    "Inserts a Latex letter skeleton into current buffer.
+     This only makes sense for empty buffers."
+      "Destinatario: "
+      "\\documentclass[a4paper,10pt]{letter}\n"
+      "\\usepackage[T1]{fontenc}\n"
+      "\\usepackage[latin1]{inputenc}\n"
+      "\\usepackage[italian]{babel}\n"
+      "\\name{Pinco Pallino}\n"
+      "\\address{Via Marco Polo 32\\\\ Napoli 80100\\\\ Italy}\n"
+      "\\begin{document}\n"
+      "\\begin{letter}{" str | " *** Destinatario *** " "}\n"
+      "\\opening{" _ "}\n\n"
+      "\\closing{Cordialmente}\n"
+      "\\end{letter}\n"
+      "\\end{document}\n")
+\end{Verbatim}
+
+Come già detto dopo aver dichiarato il nome dello \emph{scheletro}
+seguono una o due (o a piacere) righe di commento. La riga:
+\begin{Verbatim}
+"Destinatario: " 
+\end{Verbatim}
+è una riga di prompt che userà il \emph{minibuffer} per interagire con
+l'utente quando verrà letto (o trovato) il simbolo \verb!str! nel
+codice; il valore inserito dall'utente verrà proprio sostituito a
+\verb!str!.
+
+Il simbolo '\_' indica la posizione dove verrà posto il cursore
+quando il codice \emph{skeleton} è completamente inserito. 
+
+Il codice che si vuole inserire va sempre tra due doppi apici, i
+comandi vanno preceduti da un \emph{backslash} e per ritornare a capo
+si usa \verb!\n!.
+
+Infine, come precedentemente detto,    si può richiamare il \emph{codice
+  pronto uso} con una combinazione di tasti personale, ad esempio se
+si vuole usare la combinazione \verb!C-c l!, bisogna scrivere nel file
+\emph{.emacs}:
+\begin{Verbatim}
+(global-set-key "\C-cl" 'LaTeX-skeleton-letter)
+\end{Verbatim}
+
+Ulteriori approfondimenti (oltre a quelli a cui si perviene con
+\verb!C-h i d m Autotype!) si possono reperire on-line alla pagina di
+riferimento (\mano{}
+\href{http://www.emacswiki.org/emacs/SkeletonMode}{Skeleton Mode}).
 
 \section{Autocomplete mode}
 \label{sec:auto}
@@ -436,6 +560,7 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 \textcolor{red!50}{\lipsum[1]}
 
 \cleardoublepage
+\phantomsection
 \addcontentsline{toc}{section}{\bibname}
 \nocite{*}
 \printbibliography
