Aggiunti file e immagini nel documento

--- a/macro.sty
+++ b/macro.sty
@@ -11,7 +11,7 @@
 \RequirePackage{indentfirst}
 \RequirePackage{pifont}
 \RequirePackage{guit}
-
+\RequirePackage{graphicx}
 \RequirePackage{xcolor}
 
 \usepackage{fancyvrb}
