--- a/main.tex
+++ b/main.tex
@@ -554,6 +554,21 @@ Le reference card sono disponibili sia in rete, sia sul proprio
 computer una volta installati \emacs{} ed \auctex. Sul proprio
 computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 
+\begin{figure}[t]
+  \centering
+  \unitlength=0.005\textwidth
+  \begin{picture}(200,120)
+    \put(0,0){\framebox(94,120){\includegraphics[height=0.52\textwidth]{refemacs}}}
+    \put(95,0){\rotatebox{90}{\sffamily\tiny Immagine estratta da
+        \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_refcard.pdf}{GNU
+          Emacs Reference Card}}}
+    \put(100,0){\framebox(94,120){\includegraphics[height=0.52\textwidth]{refauctex}}}
+    \put(195,0){\rotatebox{90}{\sffamily\tiny Immagine estratta da
+        \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
+          Reference Card}}}
+  \end{picture}
+\end{figure}
+
 \section{Conclusioni}
 \label{sec:fine}
 
