Aggiunto record biblio O. de Bari; Modifiche varie

--- a/biblio.bib
+++ b/biblio.bib
@@ -45,4 +45,15 @@
   year = {2010},
   url = {www.gnu.org/software/auctex/manual/auctex.pdf}
 }
-
+@ARTICLE{emacs:odebari,
+  author =   {Onofrio de Bari},
+  title =    {{GNU Emacs} e {AUC\TeX} per {\LaTeX}},
+  journal =  {Ars\TeX nica},
+  year =     2006,
+  number =   2,
+  pages =    {60-64},
+  month =    {Ottobre},
+  language=  {italian},
+  issn=      {1828-2350},
+  url=       {http://www.guit.sssup.it/arstexnica/}
+}
