--- a/main.tex
+++ b/main.tex
@@ -408,7 +408,7 @@ seguenti righe a quelle sopra descritte:
 
 \textcolor{red}{\lipsum[1]}
 
-\section{Skeleton Mode}
+\section{Skeleton mode}
 \label{sec:skelmode}
 
 \subsection*{Introduzione}
