--- a/main.tex
+++ b/main.tex
@@ -108,8 +108,8 @@ $ sudo zypper install emacs
 \end{Verbatim} 
 
 Il metodo più difficile, per i non avvezzi all'uso del terminale, consiste nel
-compilare \emacs{} a partire dal codice sorgente, tuttavia non è intenzione di
-questa guida spiegare come fare ciò.
+compilare il codice sorgente di \emacs{}, tuttavia non è intenzione di questa
+guida spiegare come fare ciò.
 
 Dopo averlo installato, \emacs{} potrà essere avviato facendo clic sul suo
 lanciatore oppure eseguendo da terminale il comando
